# bug-free-octo-pancake

./: .gitignore  README.md  pyproject.toml
notebooks/: _evaluations.json  benchmark.csv  rag.ipynb  rag_dataset.csv  rag_dataset.json  scan_report.html
notebooks/giskard_evaluation/: agent_answer.json  knowledge_base.jsonl  knowledge_base_meta.json  metrics_results.json  report_details.json  testset.jsonl
reports/: raget_report.html  scan_report.html
