[project]
name = "bug-free-octo-pancake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.36.1",
    "giskard[llm]>=2.17.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "llama-index>=0.12.41",
    "llama-index-embeddings-azure-openai>=0.3.8",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-azure-openai>=0.3.4",
    "llama-index-node-parser-docling>=0.3.2",
    "llama-index-packs-rag-evaluator>=0.3.1",
    "llama-index-readers-docling>=0.3.2",
    "python-dotenv>=1.1.0",
    "ragas>=0.2.15",
    "spacy>=3.8.7",
]
